Added WishList and Cart Also Update google Sign

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CarerrAnna</string>
+    <string name="app_name">Career Anna</string>
     <string name="facebook_app_id">341622293308668</string>
     <string name="fb_login_protocol_scheme">fb341622293308668</string>
     <string-array name="how_did">
