Added Articles Table

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="intro_slide2_title">Video Based Learning</string>
     <string name="intro_slide2_desc">On Demand interactive video courses.</string>
     <string name="intro_slide3_title">Q&amp;A from Experts</string>
-    <string name="intro_slide3_desc">Ask Anything You Need To Know.</string>
+    <string name="intro_slide3_desc">Ask and Learn from experts and professionals who are passionate to help others learn.</string>
 
 
     <string name="signout">Sign out</string>
