--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,12 +11,18 @@
         <item>Direct</item>
         <item>Mail</item>
     </string-array>
+    <string name="explore">Explore</string>
     <string name="Rs">\u20B9</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
     <string name="desc"><u>Description</u></string>
     <string name="ccourses"><u>Current Course</u></string>
     <string name="mycourses"><u>My Courses</u></string>
+    <string name="MBA" >MBA</string>
+    <string name="WishList">Wish List</string>
+    <string name="settings">Settings</string>
+    <string name="our_mentors">Our Mentors</string>
+    <string name="general_knowledge">General Knowledge</string>
     <string name="courses"><u>Top Courses</u></string>
     <string name="categories"><u>Categories</u></string>
     <string name="terms">By signing up you agree to our <u>Terms and Conditions </u>.</string>
@@ -26,7 +32,7 @@
     <string name="cert_date">Date of completion</string>
     <string name="cert_download">Download Certificate</string>
     <string name="change_content_language">Change content language</string>
-    <string name="select_preferred_language">Select your preferred language</string>
+    <string name="select_preferred_language">Choose your preferred language</string>
 
     <string name="intro_slide1_title">7,83,000+ Users</string>
     <string name="intro_slide1_desc">Largest Platform to Learn and Share Knowledge <br />  in Indian Languages.</string>
@@ -144,4 +150,10 @@
     <string name="oops_looks_like_we_don_t_have_any_notes_for_this_course_yet_check_back_soon">Sorry, Ebooks is not the part of this course! Check videos</string>
     <string name="oops_looks_like_we_don_t_have_any_videos_for_this_course_yet_check_back_soon">Sorry, Videos is not the part of this course! Check ebooks</string>
 
+    <string name="articles" >Articles</string>
+    <string name="trending">Trending</string>
+    <string name="free">Free</string>
+    <string name="latest">Latest</string>
+    <string name="premium">Premium</string>
+    <string name="my_cart">My Cart</string>
 </resources>
