--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="desc"><u>Description</u></string>
     <string name="ccourses"><u>Current Course</u></string>
     <string name="mycourses"><u>My Courses</u></string>
-    <string name="MBA" >MBA</string>
+    <string name="MBA">MBA</string>
     <string name="WishList">Wish List</string>
     <string name="settings">Settings</string>
     <string name="our_mentors">Our Mentors</string>
@@ -124,14 +124,14 @@
     <string name="course_delete_confirm">Are you sure you want to remove this course from the cart?</string>
     <string name="course_deleted">Course successfully removed</string>
     <string name="added_to_wishlist">Added to your wishlist!</string>
-    <string name="loading_subcategory">Loading subcategory...</string>
-    <string name="loading_courses">Loading courses...</string>
+    <string name="loading_subcategory">Loading ...</string>
+    <string name="loading_courses">Loading ... </string>
     <string name="loading_your_courses">Loading your courses...</string>
     <string name="open_browser_limit_reached">You have reached your limit of open browsing. Please sign up/ sign in for free to continue accessing the app.</string>
     <string name="forget_pw_enter_email">Please enter your registered email address</string>
-    <string name="loading_premium_courses">Loading Premium courses, please wait... </string>
-    <string name="loading_free_courses">Loading free courses, please wait... </string>
-    <string name="loading_just_a_sec">Loading, just give us a few seconds...</string>
+    <string name="loading_premium_courses">Loading ... </string>
+    <string name="loading_free_courses">Loading ... </string>
+    <string name="loading_just_a_sec">Loading, ...</string>
     <string name="update_your_app">New version is up! Update to get new features and latest courses!</string>
     <string name="added_to_cart">Successfully added to cart!</string>
     <string name="please_wait">Please wait...</string>
@@ -155,10 +155,26 @@
     <string name="certificates_user">Once you complete your courses, your certificates will appear here!</string>
     <string name="buy_this_fre_course">Add this course for free by clicking on the cart to view all videos!</string>
 
-    <string name="articles" >Articles</string>
+    <string name="articles">Articles</string>
     <string name="trending">Trending</string>
     <string name="free">Free</string>
     <string name="latest">Latest</string>
     <string name="premium">Premium</string>
     <string name="my_cart">My Cart</string>
+    <string name="sign_in">Sign in</string>
+    <string name="create_an_account">Create an account</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="continue_with">Continue with</string>
+    <string name="or_hindi">OR</string>
+    <string name="log_in">Log In</string>
+    <string name="account">Account</string>
+    <string name="search_your_course">Search Your Course</string>
+    <string name="videos">Videos</string>
+    <string name="ebooks">E-Books</string>
+    <string name="Test">Test</string>
+    <string name="retry">Retry</string>
+    <string name="an_error_has_occured_please_try_again_by_clicking_refresh">An Error Has Occured. Please Try Again By Clicking Refresh</string>
+    <string name="refresh">Refresh</string>
 </resources>
