Changes In App Links

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,4 +206,6 @@
     <string name="pay_via_paytm">Pay via <b>Paytm</b></string>
     <string name="enroll_now">Enroll Now</string>
     <string name="add_to_cart">Add To Cart</string>
+    <string name="think_careeranna">Think CareerAnna</string>
+    <string name="think_mba">Think MBA</string>
 </resources>
